--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Portfolio of My Name</title>
+	<title>Portfolio of Kat Pe Benito</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   <meta charset="UTF-8" />
@@ -18,7 +18,7 @@
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
 	<main id="content">
-        <h1>Portfolio of My Name</h1>
+        <h1>Portfolio of Kat Pe Benito</h1>
 		<section class="two-column">
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
@@ -26,7 +26,7 @@
                         <img class="cat-photo" src="./img/cute-grey-kitten.jpg">
                     </div>
 					<h2>About Me</h2>
-					<p>Tell us about yourself. Add photos. Customize this. Go crazy.</p>
+					<p>Aspiring software engineer and Senior student as a 3rd year at UCSC in Computer Science and Game Design. Currently working as a Client Support Assistant for University's Information Technology Services.\n\n"There are no limits to what is possible. Just what I have yet to learn, and even that could be pushed further."</p>
 			</div>
             <div class="minor-section">
                 <h2>Links to Experiments</h2>
