--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="/script.js" defer></script>
+    <script src="js/project.js" defer></script>
   </head>
   <body>
     <button id="clicker">reroll it</button>
