--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <script src="js/script.js" defer></script>
+    <script src="js/project.js" defer></script>
   </head>
   <body>
     <button id="clicker">reroll it</button>
