--- a/experiment2/index.html
+++ b/experiment2/index.html
@@ -52,24 +52,31 @@
     integrity="sha512-b/htz6gIyFi3dwSoZ0Uv3cuv3Ony7EeKkacgrcVg8CMzu90n777qveu0PBcbZUA7TzyENGtU+qZRuFAkfqgyoQ=="
     crossorigin="anonymous"
   ></script>
-  <script src="js/script.js" defer></script>
+  
 </head>
 <body>
   <!-- Enclosed script in a box -->
   <div class="container">
     <div class="box">
       <span class="small-text">click for a shooting star !</span>
-      <script src="https://button.glitch.me/button.js" defer></script>
+      <script src="js/script.js" defer></script>
     </div>
     <!-- Description box placed to the right -->
     <div class="box">
-      <p>This script creates a button that generates a shooting star when clicked. Enjoy!</p>
+      <span class="small-text">Relation to inspring image:
+
+        - Color: The sky gradient and underside of clouds was picked with a dropper tool from the inspiration image with the website, "https://redketchup.io/color-picker"
+        - Primitives: The clouds are rendered with clusters of varying`ellipsis` primitives.
+        - Polygons: The background mountain is a single randomly polygon using `vertex` calls.
+        - Composition: Different random seed values lead to differently shaped mountains and differently positioned trees.
+        - Life: The position of trees is animated over time as if to simulate the view from a passing train and the slightly responds to the horizontal motion of the mouse cursor. !</span>
     </div>
   </div>
 
   <div class="box">
-    <h2>Image Placeholder</h2>
+    <span class="small-text"> inspiration image</span>
     <img src="inspo.png" alt="Placeholder Image" />
   </div>
 </body>
 </html>
+
